--- a/apps/oop-login/composer.json
+++ b/apps/oop-login/composer.json
@@ -2,5 +2,8 @@
     "require-dev": {
         "phpunit/phpunit": "5.7.*",
         "phpunit/dbunit": ">=1.2"
+    },
+    "require": {
+        "symfony/http-foundation": "^3.4"
     }
 }
